--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Tristan.Pendergrass</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
